# tripletenBootCamp

./: .gitignore  pyproject.toml
01_Sprint1/: 02_variables.py  03_String.py  04_lists.py
01_Sprint1/CodeSesions/: 1w-1c.py
01_Sprint1/Project/: practica.ipynb  prueba.ipynb  prueba_feedback.ipynb
02_Spirnt2/: 01_Bucles.py  02_Sentencias_Condicionales.py  03_Diccionarios.py  04_Funciones.py  practice.py
02_Spirnt2/CodeSesions/: 1w-1c.py
02_Spirnt2/Project/: practica.ipynb  prueba_feedback.ipynb
03_Sprint3/: 01_DataFramesPandas.py  02_LeerVisualizarDatos.py  03_ProcesamientoyAnalisisInicial.py  04_TrabajarDuplicadosAusentes.py  05_FiltradoDeDatos.py
03_Sprint3/CodeSesion/: DADS_S3W1C2_tutor.py  README.md  onLineSesion01.py
03_Sprint3/Project/: practica.ipynb  practica_feedback.ipynb  practica_response.ipynb
03_Sprint3/datasets/: cholera.csv  cholera_short.csv  exoplanet.csv  gpp_modified.csv  letters_colors_decimals.csv  menu_item.csv  music_log_raw.csv  phone_stock.csv  product_reviews.xlsx  web_analytics_data.csv  ~$product_reviews.xlsx
04_Sprint4/: 01_Tipos_de_datos.py  02_Tipos_de_datos.py  03_Ingenieria_de_caracteristicas.py  04_Transformacion_de_datos.py  05_Graph_Example.py  05_Visualizacion_de_datos.py
04_Sprint4/Project/: practica.ipynb  practica_response.ipynb
05_Sprint5/: 02_Estadistica_descriptiva.py  03_Teoria_de_la_probabilidad.py  04_Prueba_de_hipotesis.py
06_Sprint6/: 03_2_DiccionariosBucle.py  03_3_DiccionariosEstructuras.py  03_4_DiccionariosProcesar.py  03_5_FuncionesPrarametros.py  03_6_FuncionesRetorno.py
(+85 files in other folders)
