[tool.poetry]
name = "tripleten"
version = "0.1.0"
description = "Student Environment for TripleTen Bootcamp"
authors = ["Dr. Big Gorrilla"]
license = "None"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
